projects/examples/source/10.01.13.cpp
///////////////////////////////////////////////////////////////

#include <cassert>
#include <iterator>

///////////////////////////////////////////////////////////////

int main()
{
    int array[5]{ 1, 2, 3, 4, 5 };

//  -----------------------------------------------------------

//	assert(array.size() == 5); // error

//  -----------------------------------------------------------

	assert(std::size(array) == 5);

//  -----------------------------------------------------------

//	for (auto i = std:: size(array) - 1; i >= 0; --i); // error

	for (auto i = std::ssize(array) - 1; i >= 0; --i);
}

///////////////////////////////////////////////////////////////